# gallery

./: CMakeLists.txt  CMakePresets.json
canvas/FWLite/: BranchData.cc  BranchData.h  BranchMapReader.h  CMakeLists.txt  DataGetterHelper.cc  EventNavigator.h  HistoryGetterBase.h  InputTag.cc  TypeLabelInstanceKey.h  ValidHandle.h  throwFunctions.cc  throwFunctions.h
cmakeConfig/: gallery-fragment.cmake.in
docs/: CMakeLists.txt  conf.py.in  depends.rst  helpers.py  index.rst  release-notes  releaseNotes.rst  series_temp.rst  suite_temp.rst  temp.rst
docs/series_notes/: breaking_changes.rst  general_description.rst  other.rst
docs/suite_notes/: bug_fixes.rst  ext_package_changes.rst  known_issues.rst
gallery/: AssnsBranchData.cc  AssnsBranchData.h  BranchData.cc  BranchData.h  BranchMapReader.cc  BranchMapReader.h  CMakeLists.txt  DataGetterHelper.cc  DataGetterHelper.h  Event.cc  Event.h  EventHistoryGetter.cc  EventHistoryGetter.h  EventNavigator.cc  EventNavigator.h  FindMaker.cc  FindMaker.h  Handle.cc  Handle.h  HistoryGetterBase.cc  HistoryGetterBase.h  InfoForTypeLabelInstance.cc  InfoForTypeLabelInstance.h  InputTag.cc  InputTag.h  TypeLabelInstanceKey.h  ValidHandle.cc  ValidHandle.h  classes.h  classes_def.xml  throwFunctions.cc  throwFunctions.h
gallery/test/: CMakeLists.txt  class_traits_t.cc
ups/: CMakeLists.txt  gallery-fragment.cmake.in  product-config.cmake.in  product_deps  setup_for_development
